# mllam-data-interface

./: README.md  pyproject.toml
.github/workflows/: python-package-pip.yml
specs/neural_lam/: v0.1.0.yaml
src/mllam_data_interface/: check.py
tests/: test_specs.py
